--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,8 @@ project(bitFlags C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(bitFlags main.c
+add_executable(main.c
         status.h
         bit_flags.h
-        bit_flags.c)
+        bit_flags.c
+        main.c)
